# Neiro-test

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py
app/api/: routes.py
app/models/: test_run.py
app/services/: adapters.py  metrics.py  normalization.py  pdf_metadata.py  pipeline.py  repository.py  validation.py
app/templates/: index.html  pipeline.html
tests/: test_export_csv.py  test_metrics.py  test_ollama_adapters.py  test_pdf_metadata.py  test_pipeline_e2e.py  test_upload_app.py  test_validation.py
